flutter_layer/lib/src/generated/phys_core_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Состояние системы (то, что меняется)
final class PendulumState extends ffi.Struct {
  /// Угол отклонения (рад)
  @ffi.Double()
  external double theta;

  /// Угловая скорость (рад/с)
  @ffi.Double()
  external double omega;
}

/// Параметры системы (то, что настраивает пользователь)
final class PendulumParams extends ffi.Struct {
  /// Длина нити (м)
  @ffi.Double()
  external double L;

  /// Масса грузика (кг)
  @ffi.Double()
  external double m;

  /// Ускорение свободного падения (м/с^2)
  @ffi.Double()
  external double g;

  /// Коэффициент затухания (вязкость среды)
  @ffi.Double()
  external double b;
}

/// Wrapper class for C bindings
class PhysCoreBindings {
  final ffi.DynamicLibrary _dylib;

  PhysCoreBindings(this._dylib);

  late final _step_pendulum = _dylib.lookupFunction<
      ffi.Void Function(ffi.Pointer<PendulumState>, ffi.Pointer<PendulumParams>, ffi.Double),
      void Function(ffi.Pointer<PendulumState>, ffi.Pointer<PendulumParams>, double)
  >('step_pendulum');

  void step_pendulum(
    ffi.Pointer<PendulumState> current,
    ffi.Pointer<PendulumParams> p,
    double dt,
  ) {
    return _step_pendulum(current, p, dt);
  }
}
